<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_fill0_wght400_grad0_opsz48"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/hail_fill0_wght400_grad0_opsz48"
        android:title="@string/title_daily" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/photo_library_fill0_wght400_grad0_opsz48"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/music_note_fill0_wght400_grad0_opsz48"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/person_fill0_wght400_grad0_opsz48"
        android:title="@string/title_profile" />

</menu>