<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.DetailProfileFragment"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutdetails">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/ios_13_stock_ipados_red_black_background_amoled_hd_1280x720_799"
        app:layout_constraintTop_toTopOf="@id/layoutdetails"
        android:id="@+id/layoutred">

        <TextView
            android:layout_marginTop="110dp"
            app:layout_constraintTop_toTopOf="@id/layoutred"
            app:layout_constraintLeft_toLeftOf="@id/layoutred"
            app:layout_constraintRight_toRightOf="@id/layoutred"
            app:layout_constraintHorizontal_bias="0.9"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myprofile"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileme"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="75dp"
        android:src="@drawable/whatsapp_image_2022_04_12_at_3_39_11_pm"
        app:border_color="@color/white"
        app:border_width="3dp"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="@id/layoutred"
        app:layout_constraintRight_toRightOf="@id/layoutred"
        app:layout_constraintTop_toTopOf="@id/layoutred"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profileme"
            android:id="@+id/namelayout"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textColor="@color/black"
                android:id="@+id/nama"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/nama"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/name"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/namelayout"
        android:id="@+id/umurlayout"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agedesc"
            android:textColor="@color/black"
            android:id="@+id/agedesc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/agedesc"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/age"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintTop_toBottomOf="@id/umurlayout"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/profiledetails"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average"
        app:layout_constraintTop_toBottomOf="@id/profiledetails"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>