<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageThreeFragment"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:id="@+id/layoutmain">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/group1"
            app:layout_constraintTop_toTopOf="@id/layoutmain"
            app:layout_constraintBottom_toBottomOf="@id/layoutmain"
            app:layout_constraintLeft_toLeftOf="@id/layoutmain"
            app:layout_constraintRight_toRightOf="@id/layoutmain"
            app:layout_constraintVertical_bias="0.25"
            android:id="@+id/logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="70dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:id="@+id/masuk"/>

        <com.google.android.material.button.MaterialButton style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeColor="@color/red"
            android:text="@string/start"
            app:layout_constraintTop_toBottomOf="@id/masuk"
            android:textColor="@color/black"
            app:rippleColor="@color/red"
            android:layout_marginTop="25dp"
            android:id="@+id/startbtn"
            />

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip"
            app:layout_constraintTop_toBottomOf="@id/startbtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tip"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>