<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ContactFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutnew"
        android:padding="20dp">

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:textColor="@color/red"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/contact"
            android:id="@+id/contactslayout"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/contactslayout"
                android:src="@drawable/ic_mail_fill0_wght400_grad0_opsz48"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/logoemail"/>

            <TextView
                android:id="@+id/emailjoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@id/logoemail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="20dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/contactslayout"
            android:id="@+id/phonelayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_call_fill0_wght400_grad0_opsz48"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/logophone"/>

            <TextView
                android:id="@+id/wajoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phonenum"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@id/logophone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="20dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phonelayout"
            android:id="@+id/iglayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_icons8_instagram"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/logoig"/>

            <TextView
                android:id="@+id/igjoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ig"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@id/logoig"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="20dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>